...
          title: t('tabs.stations.title'),
        }}
      />
      <Tabs.Screen
        name="charge"
        options={{
          tabBarTestID: 'tab-charge',
          title: t('tabs.charge.title'),
        }}
      />
      <Tabs.Screen
        name="favorites"
        options={{
...
